--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,13 @@
 }
 @keyframes pulse {
   0%, 100% {
-    transform: scale(1);
+    transform: scale(0.7);
   }
   50% {
     transform: scale(1.1);
   }
+}
+
+.direction-rtl{
+  direction: rtl;
 }
