--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,10 @@
 
 @layer base {
   body {
-    @apply font-sans;  /* Applies Rubik globally to all text */
+    @apply font-sans text-primary-text bg-primary-bg; 
   }
 }
+
 @keyframes pulse {
   0%, 100% {
     transform: scale(0.7);
@@ -16,17 +17,20 @@
   }
 }
 
-.direction-rtl{
+.direction-rtl {
   direction: rtl;
 }
 
-.react-calendar__tile--active {
-  background-color: #407fd5; /* Tailwind 'blue-500' */
-  color: white;
+:root {
+  --color-primary: #407fd5;
+  --bg-primary: #fff;
+  --text-primary: #03032e;
+  --text-link: #407fd5;
 }
 
-.react-calendar__tile--active:enabled:hover,
-.react-calendar__tile--active:enabled:focus {
-  background-color: #407fd5; /* Tailwind 'blue-600' */
-  color: white;
+.dark {
+  --color-primary: #1e3a8a;
+  --bg-primary: #03032e;
+  --text-primary: #fff;
+  --text-link: #fff;
 }
